--- a/client/src/app/all-products/all-products.component.html
+++ b/client/src/app/all-products/all-products.component.html
@@ -3,11 +3,12 @@
     <div class="col">
       <h3>Our Products</h3>
       <p>
-        <input type="text" class="form-control" placeholder="Search..." />
+        <input (keyup)="filterQ(query.value)" #query
+        type="text" class="form-control" placeholder="Search..." />
       </p>
       <br/>
       <div class="row">
-        <div *ngFor="let item of dataarray" class="card">
+        <div *ngFor="let item of filterd" class="card">
           <div class="imgBox">
             <a> <img
               src="{{ item.imageUrl }}"
@@ -23,11 +24,12 @@
                 </h3>
                 <p class="price">Price : {{ item.price }} TND</p>
                 <a class="buy">Add To Cart</a>
-         
+                <div *ngIf="(item+1)%4===0" class="w-100" ><br></div>
         </div>
-           
           </div>
-       
+          <div *ngIf="filterd.length == 0"> 
+              <p class="paragraph">Sorry, NO PRODUCTS FOUND!!</p> 
+           </div> 
       </div>
     </div>
   </div>
