--- a/client/src/app/nav-bar/nav-bar.component.html
+++ b/client/src/app/nav-bar/nav-bar.component.html
@@ -9,6 +9,27 @@
       alt="GoSHOP"
     />
   </a>
+  <!-- button search  -->
+  <div class="col-lg-8">
+    <form class="form-inline text-center">
+      <div
+        class="input-group collapse navbar-collapse"
+        id="navbarSupportedContent"
+      >
+        <a routerLink="/allProduct">
+          <button
+            class="btn btn-outline-dark"
+            type="button"
+            id="button-addon2"
+          >
+            <i class="fa fa-search">🔍</i>
+          </button>
+        </a>
+        <!-- <input type="text" class="form-control search_input" type="search" placeholder="Search" aria-label="Search Field" aria-describedby="button-addon2"> -->
+            
+      </div>
+    </form>
+  </div>
 
   <!-- FOR TOGGLE BUTTON -->
   <button
@@ -34,13 +55,10 @@
           id="navbarSupportedContent"
         >
           <a routerLink="/products">
-            <button
-              class="btn btn-outline-dark"
-              type="button"
-              id="button-addon2"
+            
             >
               <i class="fa fa-search"></i>
-            </button>
+         
           </a>
           <!-- <input type="text" class="form-control search_input" type="search" placeholder="Search" aria-label="Search Field" aria-describedby="button-addon2">
                -->
