--- a/client/src/app/modules/components/header/header.component.html
+++ b/client/src/app/modules/components/header/header.component.html
@@ -57,7 +57,7 @@
 
 <!-- Category BAR -->
 <div class="navbar1">
-  <a routerLink="/">Home</a>
+  <a routerLink="/admin">Home</a>
 
   <!-- Electronics -->
   <div class="dropdown1">
@@ -228,7 +228,7 @@
     </button>
   </div>
   <div class="dropdown1">
-    <a routerLink="admin/addProduct" class="dropbtn">
+    <a routerLink="/admin/addProduct" class="dropbtn">
       Add_Product
       <i class="fa fa-caret-down"></i>
     </a>
